--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             margin-top: 20px;
         }
 
+        #logout {
+            display: none;
+            margin-top: 10px;
+        }
+
         ul {
             list-style-type: none;
             margin: 0;
@@ -105,6 +110,11 @@
     <div id="welcome">
         <h2>Welcome to the Home Page!</h2>
         <p id="welcomeMessage"></p>
+        <button id="logoutButton" onclick="logout()">Log Out</button>
+    </div>
+
+    <div id="logout">
+        <p>Logged out successfully. Redirecting to login page...</p>
     </div>
 
     <ul>
@@ -134,6 +144,21 @@
             document.getElementById("loginForm").style.display = "none";
             document.getElementById("message").style.display = "none";
             document.getElementById("welcome").style.display = "block";
+            document.getElementById("logout").style.display = "none";
+            document.getElementById("logoutButton").style.display = "block";
+        }
+
+        function logout() {
+            document.getElementById("loginForm").style.display = "block";
+            document.getElementById("message").style.display = "block";
+            document.getElementById("welcome").style.display = "none";
+            document.getElementById("logout").style.display = "block";
+
+            // Simulating a delay before redirecting to the login page
+            setTimeout(function () {
+                document.getElementById("logout").innerHTML = "Logged out successfully. Redirecting to login page...";
+                window.location.href = "your_login_page.html"; // Replace with the actual login page URL
+            }, 2000); // 2000 milliseconds (2 seconds) delay
         }
     </script>
 
