--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selenium Test Page</title>
+    <title>E-commerce Registration</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -18,7 +18,7 @@
         }
 
         form {
-            max-width: 300px;
+            max-width: 400px;
             margin: 20px auto;
             padding: 15px;
             border: 1px solid #ccc;
@@ -33,7 +33,8 @@
             color: #333;
         }
 
-        input {
+        input,
+        select {
             width: 100%;
             padding: 8px;
             margin-bottom: 10px;
@@ -76,7 +77,7 @@
         }
 
         #registrationForm {
-            max-width: 300px;
+            max-width: 400px;
             margin: 20px auto;
             padding: 15px;
             border: 1px solid #ccc;
@@ -117,7 +118,7 @@
 </head>
 <body>
 
-    <h1>Welcome to Selenium Test Page</h1>
+    <h1>Welcome to E-commerce Registration</h1>
 
     <!-- Login Form -->
     <form id="loginForm" onsubmit="return validateLogin()">
@@ -144,13 +145,42 @@
         <label for="registerFullName">Full Name:</label>
         <input type="text" id="registerFullName" name="registerFullName" required>
 
+        <label for="registerDob">Date of Birth:</label>
+        <input type="date" id="registerDob" name="registerDob" required>
+
+        <label for="registerAddress">Address:</label>
+        <input type="text" id="registerAddress" name="registerAddress" required>
+
+        <label for="registerPhone">Phone Number:</label>
+        <input type="tel" id="registerPhone" name="registerPhone" required>
+
+        <label for="registerCountry">Country:</label>
+        <select id="registerCountry" name="registerCountry" required>
+            <option value="" disabled selected>Select your country</option>
+            <option value="USA">USA</option>
+            <option value="Canada">Canada</option>
+            <option value="UK">UK</option>
+            <!-- Add more countries as needed -->
+        </select>
+
+        <label for="registerGender">Gender:</label>
+        <select id="registerGender" name="registerGender" required>
+            <option value="" disabled selected>Select your gender</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+            <option value="Other">Other</option>
+        </select>
+
+        <label for="registerNewsletter">Subscribe to Newsletter:</label>
+        <input type="checkbox" id="registerNewsletter" name="registerNewsletter">
+
         <button type="submit">Register</button>
     </form>
 
     <div id="message"></div>
 
     <div id="welcome">
-        <h2>Welcome to the Home Page!</h2>
+        <h2>Welcome to the E-commerce Site!</h2>
         <p id="welcomeMessage"></p>
     </div>
 
@@ -231,9 +261,19 @@
             var password = document.getElementById("registerPassword").value;
             var email = document.getElementById("registerEmail").value;
             var fullName = document.getElementById("registerFullName").value;
+            var dob = document.getElementById("registerDob").value;
+            var address = document.getElementById("registerAddress").value;
+            var phone = document.getElementById("registerPhone").value;
+            var country = document.getElementById("registerCountry").value;
+            var gender = document.getElementById("registerGender").value;
+            var subscribeNewsletter = document.getElementById("registerNewsletter").checked ? "Yes" : "No";
 
             // Simulating user registration (you can add more validation/logic here)
-            alert("User registered successfully!\n\nUsername: " + username + "\nEmail: " + email + "\nFull Name: " + fullName);
+            alert("User registered successfully!\n\nUsername: " + username +
+                "\nEmail: " + email + "\nFull Name: " + fullName +
+                "\nDate of Birth: " + dob + "\nAddress: " + address +
+                "\nPhone: " + phone + "\nCountry: " + country +
+                "\nGender: " + gender + "\nSubscribe to Newsletter: " + subscribeNewsletter);
             showLoginForm();
             return false; // Prevent form submission
         }
