--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         }
 
         input,
-        select {
+        select,
+        textarea {
             width: 100%;
             padding: 8px;
             margin-bottom: 10px;
@@ -133,35 +134,42 @@
 
     <!-- Registration Form -->
     <form id="registrationForm" onsubmit="return registerUser()">
+        <label for="registerFullName">Full Name:</label>
+        <div style="display: flex; gap: 10px;">
+            <input type="text" id="registerFirstName" name="registerFirstName" placeholder="First Name" required>
+            <input type="text" id="registerLastName" name="registerLastName" placeholder="Last Name" required>
+        </div>
+
+        <label for="registerEmail">Email Address:</label>
+        <div style="display: flex; gap: 10px;">
+            <input type="email" id="registerEmail" name="registerEmail" placeholder="Email" required>
+            <input type="email" id="registerEmailConfirm" name="registerEmailConfirm" placeholder="Confirm Email" required>
+        </div>
+
+        <label for="registerPassword">Password:</label>
+        <div style="display: flex; gap: 10px;">
+            <input type="password" id="registerPassword" name="registerPassword" placeholder="Password" required>
+            <input type="password" id="registerPasswordConfirm" name="registerPasswordConfirm" placeholder="Confirm Password" required>
+        </div>
+
         <label for="registerUsername">Username:</label>
         <input type="text" id="registerUsername" name="registerUsername" required>
 
-        <label for="registerPassword">Password:</label>
-        <input type="password" id="registerPassword" name="registerPassword" required>
+        <label for="registerAddress">Address:</label>
+        <textarea id="registerAddress" name="registerAddress" rows="3" required></textarea>
 
-        <label for="registerEmail">Email:</label>
-        <input type="email" id="registerEmail" name="registerEmail" required>
-
-        <label for="registerFullName">Full Name:</label>
-        <input type="text" id="registerFullName" name="registerFullName" required>
+        <label for="registerPhone">Phone Number:</label>
+        <div style="display: flex; gap: 10px;">
+            <input type="tel" id="registerPhone" name="registerPhone" placeholder="Phone Number" required>
+            <select id="registerCountryCode" name="registerCountryCode" required>
+                <option value="+1">+1 (USA)</option>
+                <option value="+44">+44 (UK)</option>
+                <!-- Add more country codes as needed -->
+            </select>
+        </div>
 
         <label for="registerDob">Date of Birth:</label>
         <input type="date" id="registerDob" name="registerDob" required>
-
-        <label for="registerAddress">Address:</label>
-        <input type="text" id="registerAddress" name="registerAddress" required>
-
-        <label for="registerPhone">Phone Number:</label>
-        <input type="tel" id="registerPhone" name="registerPhone" required>
-
-        <label for="registerCountry">Country:</label>
-        <select id="registerCountry" name="registerCountry" required>
-            <option value="" disabled selected>Select your country</option>
-            <option value="USA">USA</option>
-            <option value="Canada">Canada</option>
-            <option value="UK">UK</option>
-            <!-- Add more countries as needed -->
-        </select>
 
         <label for="registerGender">Gender:</label>
         <select id="registerGender" name="registerGender" required>
@@ -171,8 +179,14 @@
             <option value="Other">Other</option>
         </select>
 
-        <label for="registerNewsletter">Subscribe to Newsletter:</label>
+        <label for="registerNewsletter">Newsletter Subscription:</label>
         <input type="checkbox" id="registerNewsletter" name="registerNewsletter">
+
+        <label for="registerTerms">Terms and Conditions:</label>
+        <input type="checkbox" id="registerTerms" name="registerTerms" required>
+
+        <label for="registerProfilePicture">Profile Picture:</label>
+        <input type="file" id="registerProfilePicture" name="registerProfilePicture">
 
         <button type="submit">Register</button>
     </form>
@@ -257,23 +271,50 @@
         }
 
         function registerUser() {
-            var username = document.getElementById("registerUsername").value;
-            var password = document.getElementById("registerPassword").value;
+            var firstName = document.getElementById("registerFirstName").value;
+            var lastName = document.getElementById("registerLastName").value;
             var email = document.getElementById("registerEmail").value;
-            var fullName = document.getElementById("registerFullName").value;
-            var dob = document.getElementById("registerDob").value;
+            var emailConfirm = document.getElementById("registerEmailConfirm").value;
+            var password = document.getElementById("registerPassword").value;
+            var passwordConfirm = document.getElementById("registerPasswordConfirm").value;
+            var username = document.getElementById("registerUsername").value;
             var address = document.getElementById("registerAddress").value;
             var phone = document.getElementById("registerPhone").value;
-            var country = document.getElementById("registerCountry").value;
+            var countryCode = document.getElementById("registerCountryCode").value;
+            var dob = document.getElementById("registerDob").value;
             var gender = document.getElementById("registerGender").value;
             var subscribeNewsletter = document.getElementById("registerNewsletter").checked ? "Yes" : "No";
+            var agreeTerms = document.getElementById("registerTerms").checked;
+            var profilePicture = document.getElementById("registerProfilePicture").value;
 
             // Simulating user registration (you can add more validation/logic here)
-            alert("User registered successfully!\n\nUsername: " + username +
-                "\nEmail: " + email + "\nFull Name: " + fullName +
-                "\nDate of Birth: " + dob + "\nAddress: " + address +
-                "\nPhone: " + phone + "\nCountry: " + country +
-                "\nGender: " + gender + "\nSubscribe to Newsletter: " + subscribeNewsletter);
+            if (email !== emailConfirm) {
+                alert("Email and Confirm Email must match.");
+                return false; // Prevent form submission
+            }
+
+            if (password !== passwordConfirm) {
+                alert("Password and Confirm Password must match.");
+                return false; // Prevent form submission
+            }
+
+            if (!agreeTerms) {
+                alert("Please agree to the terms and conditions.");
+                return false; // Prevent form submission
+            }
+
+            alert("User registered successfully!\n\n" +
+                "Name: " + firstName + " " + lastName +
+                "\nEmail: " + email +
+                "\nPassword: [Hidden for security]" +
+                "\nUsername: " + username +
+                "\nAddress: " + address +
+                "\nPhone: " + countryCode + " " + phone +
+                "\nDate of Birth: " + dob +
+                "\nGender: " + gender +
+                "\nSubscribe to Newsletter: " + subscribeNewsletter +
+                "\nProfile Picture: " + profilePicture);
+
             showLoginForm();
             return false; // Prevent form submission
         }
