--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
             text-align: center;
             margin: 20px;
+            padding: 20px;
             position: relative;
         }
 
@@ -21,6 +23,7 @@
             max-width: 400px;
             margin: 20px auto;
             padding: 15px;
+            background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -31,6 +34,7 @@
             display: block;
             margin-bottom: 8px;
             color: #333;
+            text-align: left;
         }
 
         input,
@@ -63,6 +67,7 @@
         #welcome {
             display: none;
             margin-top: 20px;
+            text-align: center;
         }
 
         #logoutButton {
@@ -70,6 +75,16 @@
             position: absolute;
             top: 10px;
             right: 10px;
+            background-color: #333;
+            color: white;
+            border: none;
+            padding: 8px 12px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #logoutButton:hover {
+            background-color: #111;
         }
 
         #logout {
@@ -81,6 +96,7 @@
             max-width: 400px;
             margin: 20px auto;
             padding: 15px;
+            background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -98,6 +114,7 @@
             padding: 0;
             overflow: hidden;
             background-color: #333;
+            border-radius: 5px;
         }
 
         li {
