--- a/index.html
+++ b/index.html
@@ -1,328 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce Registration</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            margin: 20px;
-            position: relative;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        form {
-            max-width: 400px;
-            margin: 20px auto;
-            padding: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            display: none;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-            color: #333;
-        }
-
-        input,
-        select,
-        textarea {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        #message {
-            color: #333;
-            margin-top: 20px;
-        }
-
-        #welcome {
-            display: none;
-            margin-top: 20px;
-        }
-
-        #logoutButton {
-            display: none;
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-
-        #logout {
-            display: none;
-            margin-top: 10px;
-        }
-
-        #registrationForm {
-            max-width: 400px;
-            margin: 20px auto;
-            padding: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        #registrationLink {
-            color: #333;
-            text-decoration: underline;
-            cursor: pointer;
-        }
-
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #333;
-        }
-
-        li {
-            float: left;
-        }
-
-        li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        li a:hover {
-            background-color: #111;
-        }
-    </style>
-</head>
+<html>
 <body>
+<style>
+.information {
+  background-color: white;
+  color: black;
+  padding: 10px;
+}
+</style>
+<h2>Contact Selenium</h2>
 
-    <h1>Welcome to E-commerce Registration</h1>
+<form action="/action_page.php">
+  <input type="radio" name="gender" value="m" />Male &nbsp;
+  <input type="radio" name="gender" value="f" />Female <br>
+  <br>
+  <label for="fname">First name:</label><br>
+  <input class="information" type="text" id="fname" name="fname" value="Jane"><br><br>
+  <label for="lname">Last name:</label><br>
+  <input class="information" type="text" id="lname" name="lname" value="Doe"><br><br>
+  <label for="newsletter">Newsletter:</label>
+  <input type="checkbox" name="newsletter" value="1" /><br><br>
+  <input type="submit" value="Submit">
+</form> 
 
-    <!-- Login Form -->
-    <form id="loginForm" onsubmit="return validateLogin()">
-        <label for="loginUsername">Username:</label>
-        <input type="text" id="loginUsername" name="loginUsername" required>
-
-        <label for="loginPassword">Password:</label>
-        <input type="password" id="loginPassword" name="loginPassword" required>
-
-        <button type="submit">Login</button>
-    </form>
-
-    <!-- Registration Form -->
-    <form id="registrationForm" onsubmit="return registerUser()">
-        <label for="registerFullName">Full Name:</label>
-        <div style="display: flex; gap: 10px;">
-            <input type="text" id="registerFirstName" name="registerFirstName" placeholder="First Name" required>
-            <input type="text" id="registerLastName" name="registerLastName" placeholder="Last Name" required>
-        </div>
-
-        <label for="registerEmail">Email Address:</label>
-        <div style="display: flex; gap: 10px;">
-            <input type="email" id="registerEmail" name="registerEmail" placeholder="Email" required>
-            <input type="email" id="registerEmailConfirm" name="registerEmailConfirm" placeholder="Confirm Email" required>
-        </div>
-
-        <label for="registerPassword">Password:</label>
-        <div style="display: flex; gap: 10px;">
-            <input type="password" id="registerPassword" name="registerPassword" placeholder="Password" required>
-            <input type="password" id="registerPasswordConfirm" name="registerPasswordConfirm" placeholder="Confirm Password" required>
-        </div>
-
-        <label for="registerUsername">Username:</label>
-        <input type="text" id="registerUsername" name="registerUsername" required>
-
-        <label for="registerAddress">Address:</label>
-        <textarea id="registerAddress" name="registerAddress" rows="3" required></textarea>
-
-        <label for="registerPhone">Phone Number:</label>
-        <div style="display: flex; gap: 10px;">
-            <input type="tel" id="registerPhone" name="registerPhone" placeholder="Phone Number" required>
-            <select id="registerCountryCode" name="registerCountryCode" required>
-                <option value="+1">+1 (USA)</option>
-                <option value="+44">+44 (UK)</option>
-                <!-- Add more country codes as needed -->
-            </select>
-        </div>
-
-        <label for="registerDob">Date of Birth:</label>
-        <input type="date" id="registerDob" name="registerDob" required>
-
-        <label>Gender:</label>
-        <div>
-            <input type="radio" id="genderMale" name="registerGender" value="Male" required>
-            <label for="genderMale">Male</label>
-
-            <input type="radio" id="genderFemale" name="registerGender" value="Female" required>
-            <label for="genderFemale">Female</label>
-
-            <input type="radio" id="genderOther" name="registerGender" value="Other" required>
-            <label for="genderOther">Other</label>
-        </div>
-
-        <label for="registerNewsletter">Newsletter Subscription:</label>
-        <input type="checkbox" id="registerNewsletter" name="registerNewsletter">
-
-        <label for="registerTerms">Terms and Conditions:</label>
-        <input type="checkbox" id="registerTerms" name="registerTerms" required>
-
-        <label for="registerProfilePicture">Profile Picture:</label>
-        <input type="file" id="registerProfilePicture" name="registerProfilePicture">
-
-        <button type="submit">Register</button>
-    </form>
-
-    <div id="message"></div>
-
-    <div id="welcome">
-        <h2>Welcome to the E-commerce Site!</h2>
-        <p id="welcomeMessage"></p>
-    </div>
-
-    <button id="logoutButton" onclick="logout()">Log Out</button>
-
-    <div id="logout">
-        <p>Logged out successfully. Redirecting to index page...</p>
-    </div>
-
-    <!-- Navigation Links -->
-    <ul>
-        <li><a href="#login" id="loginLink" onclick="showLoginForm()">Login</a></li>
-        <li><a href="#registration" id="registrationLink" onclick="showRegistrationForm()">Register</a></li>
-        <li><a href="#home" id="homeLink" onclick="showHomePage()">Home</a></li>
-    </ul>
-
-    <script>
-        function validateLogin() {
-            var username = document.getElementById("loginUsername").value;
-            var password = document.getElementById("loginPassword").value;
-
-            // Simulating login validation
-            if (username === "testuser" && password === "testpassword") {
-                document.getElementById("message").innerText = "Login successful!";
-                document.getElementById("welcomeMessage").innerText = "Hello, " + username + "!";
-                showHomePage();
-                return false; // Prevent form submission
-            } else {
-                alert("Invalid login credentials. Please try again.");
-                return false; // Prevent form submission
-            }
-        }
-
-        function showLoginForm() {
-            document.getElementById("loginForm").style.display = "block";
-            document.getElementById("registrationForm").style.display = "none";
-            document.getElementById("message").style.display = "block";
-            document.getElementById("welcome").style.display = "none";
-            document.getElementById("logoutButton").style.display = "none";
-            document.getElementById("logout").style.display = "none";
-        }
-
-        function showRegistrationForm() {
-            document.getElementById("loginForm").style.display = "none";
-            document.getElementById("registrationForm").style.display = "block";
-            document.getElementById("message").style.display = "none";
-            document.getElementById("welcome").style.display = "none";
-            document.getElementById("logoutButton").style.display = "none";
-            document.getElementById("logout").style.display = "none";
-        }
-
-        function showHomePage() {
-            document.getElementById("loginForm").style.display = "none";
-            document.getElementById("registrationForm").style.display = "none";
-            document.getElementById("message").style.display = "none";
-            document.getElementById("welcome").style.display = "block";
-            document.getElementById("logoutButton").style.display = "block";
-            document.getElementById("logout").style.display = "none";
-        }
-
-        function logout() {
-            document.getElementById("loginForm").style.display = "block";
-            document.getElementById("registrationForm").style.display = "none";
-            document.getElementById("message").style.display = "block";
-            document.getElementById("welcome").style.display = "none";
-            document.getElementById("logoutButton").style.display = "none";
-            document.getElementById("logout").style.display = "block";
-
-            // Simulating a delay before redirecting to the index page
-            setTimeout(function () {
-                document.getElementById("logout").innerHTML = "Logged out successfully. Redirecting to index page...";
-                window.location.href = "index.html"; // Redirect to index page
-            }, 2000); // 2000 milliseconds (2 seconds) delay
-        }
-
-        function registerUser() {
-            var firstName = document.getElementById("registerFirstName").value;
-            var lastName = document.getElementById("registerLastName").value;
-            var email = document.getElementById("registerEmail").value;
-            var emailConfirm = document.getElementById("registerEmailConfirm").value;
-            var password = document.getElementById("registerPassword").value;
-            var passwordConfirm = document.getElementById("registerPasswordConfirm").value;
-            var username = document.getElementById("registerUsername").value;
-            var address = document.getElementById("registerAddress").value;
-            var phone = document.getElementById("registerPhone").value;
-            var countryCode = document.getElementById("registerCountryCode").value;
-            var dob = document.getElementById("registerDob").value;
-            var gender = document.querySelector('input[name="registerGender"]:checked').value;
-            var subscribeNewsletter = document.getElementById("registerNewsletter").checked ? "Yes" : "No";
-            var agreeTerms = document.getElementById("registerTerms").checked;
-            var profilePicture = document.getElementById("registerProfilePicture").value;
-
-            // Simulating user registration (you can add more validation/logic here)
-            if (email !== emailConfirm) {
-                alert("Email and Confirm Email must match.");
-                return false; // Prevent form submission
-            }
-
-            if (password !== passwordConfirm) {
-                alert("Password and Confirm Password must match.");
-                return false; // Prevent form submission
-            }
-
-            if (!agreeTerms) {
-                alert("Please agree to the terms and conditions.");
-                return false; // Prevent form submission
-            }
-
-            alert("User registered successfully!\n\n" +
-                "Name: " + firstName + " " + lastName +
-                "\nEmail: " + email +
-                "\nPassword: [Hidden for security]" +
-                "\nUsername: " + username +
-                "\nAddress: " + address +
-                "\nPhone: " + countryCode + " " + phone +
-                "\nDate of Birth: " + dob +
-                "\nGender: " + gender +
-                "\nSubscribe to Newsletter: " + subscribeNewsletter +
-                "\nProfile Picture: " + profilePicture);
-
-            showLoginForm();
-            return false; // Prevent form submission
-        }
-    </script>
+<p>To know more about Selenium, visit the official page 
+<a href ="www.selenium.dev">Selenium Official Page</a> 
+</p>
 
 </body>
 </html>
