Updated_defectivepage index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1>Defective Application</h1>
     <form id="defectiveForm">
         <label for="username">Username</label>
-        <input type="text" id="username" name="username">
+        <input type="text" id="username" name="username"placeholder="required">
 
         <label for="password">Password</label>
         <input type="password" id="password" name="password">
